...
        }
        return _buildProfile(user);
      },
      loading: () => const CupertinoActivityIndicator(),
      error: (error, stackTrace) {
        return const Center(
          child: Text('Error:'),
        );
      },
    );
  }

  bool canNavigatorPop(BuildContext context) {
...
                                showCupertinoDialog(
                                    context: context,
                                    builder: (newContext) {
                                      return CupertinoAlertDialog(
                                        title: const Text('Error'),
                                        content: const Text(
                                            'User deleted his/her account'),
                                        actions: <Widget>[
                                          CupertinoDialogAction(
                                            isDefaultAction: true,
                                            child: const Text('OK'),
                                            onPressed: () {
                                              ref.invalidate(followingProvider);
...
                                    ),
                                    followings.any((element) =>
                                            element.uid! == widget.user)
                                        ? "Unfollow"
                                        : user.requests!.contains(uid)
                                            ? "Requested"
                                            : "Follow");
                              },
                              loading: () => const CupertinoActivityIndicator(),
                              error: (error, stackTrace) {
                                return const Center(
                                  child: Text('N.A.'),
                                );
...
                        user.isPublic! ||
                        followings
                            .any((element) => element.uid! == widget.user))
                    ? Column(
                        children: [
                          CustomSelectionOption(
                            textLeft: 'Events created',
                            textRight: 'Events joined',
                            onChanged: (value) {
                              setState(() {
                                index = value;
                              });
                            },
                          ),
...
                                  .textTheme
                                  .textStyle
                                  .color,
                            ),
                            const SizedBox(height: 10),
                            Text(
                              "This Account is private",
                              style: TextStyle(
                                fontWeight: FontWeight.bold,
                                fontSize: 20,
                                color: CupertinoTheme.of(context)
                                    .textTheme
                                    .textStyle
...
                    return const Center(
                      child: Text('N.A.'),
                    );
                  },
                ),
                const SizedBox(height: 10),
                Text("Groups",
                    style: TextStyle(
                      fontSize: 18,
                      color:
                          CupertinoTheme.of(context).textTheme.textStyle.color,
                    )),
              ],
...
                      child: Text('N.A.'),
                    );
                  },
                ),
                const SizedBox(height: 10),
                Text(
                  "Followers",
                  style: TextStyle(
                    fontSize: 18,
                    color: CupertinoTheme.of(context).textTheme.textStyle.color,
                  ),
                ),
              ],
...
                      child: Text('N.A.'),
                    );
                  },
                ),
                const SizedBox(height: 10),
                Text(
                  "Following",
                  style: TextStyle(
                    fontSize: 18,
                    color: CupertinoTheme.of(context).textTheme.textStyle.color,
                  ),
                ),
              ],
...
