...
                              : MediaQuery.of(context).size.height * 0.35,
                          child: Image.asset(
                              'assets/images/search_followers.png')),
                  const Column(
                    children: [
                      Text(
                        "No followers",
                        style: TextStyle(
                            fontSize: 20,
                            fontWeight: FontWeight.bold,
                            color: CupertinoColors.systemGrey2),
                      ),
                      SizedBox(height: 10),
...
                                Constants.limitWidth
                            ? MediaQuery.of(context).size.height * 0.55
                            : MediaQuery.of(context).size.height * 0.4,
                        child: Image.asset('assets/images/no_followers.png')),
                const Center(
                  child: Text(
                    "No followers found",
                    style: TextStyle(
                        fontSize: 20,
                        fontWeight: FontWeight.bold,
                        color: CupertinoColors.systemGrey2),
                  ),
                ),
...
                              ? MediaQuery.of(context).size.height * 0.6
                              : MediaQuery.of(context).size.height * 0.4,
                          child:
                              Image.asset('assets/images/search_groups.png')),
                  const Column(
                    children: [
                      Text("No groups",
                          style: TextStyle(
                              fontSize: 20,
                              fontWeight: FontWeight.bold,
                              color: CupertinoColors.systemGrey2)),
                      SizedBox(height: 10),
                      Text("Join in a group to share news",
...
                          height: MediaQuery.of(context).size.width >
                                  Constants.limitWidth
                              ? MediaQuery.of(context).size.height * 0.6
                              : MediaQuery.of(context).size.height * 0.4,
                          child:
                              Image.asset('assets/images/no_groups_found.png')),
                  const Text("No groups found",
                      style: TextStyle(
                          fontSize: 20,
                          fontWeight: FontWeight.bold,
                          color: CupertinoColors.systemGrey2)),
                ],
              ),
...
