...
                                        Constants.limitWidth
                                    ? MediaQuery.of(context).size.height * 0.6
                                    : MediaQuery.of(context).size.height * 0.4,
                                child: Image.asset(
                                    'assets/images/no_following.png')),
                        const Text(
                          'No following anyone',
                          style: TextStyle(
                              fontSize: 20,
                              fontWeight: FontWeight.bold,
                              color: CupertinoColors.systemGrey2),
                        ),
                      ],
...
                                                    0.4,
                                        child: Image.asset(
                                            'assets/images/search_following.png'),
                                      ),
                                const Center(
                                  child: Text(
                                    'No following found',
                                    style: TextStyle(
                                        fontSize: 20,
                                        fontWeight: FontWeight.bold,
                                        color: CupertinoColors.systemGrey2),
                                  ),
                                ),
...
